--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,17 +1,9 @@
 .logo {
-  //display: flex;
-  //align-items: center;
-  //
-  //&__text {
-  //  margin-right: 9px;
-  //}
-  //
-  //&__text p {
-  //  font-family: Montserrat, sans-serif;
-  //  font-size: 28px;
-  //  font-style: normal;
-  //  font-weight: 600;
-  //  line-height: calc(32 / 28);
-  //  color: #FFFFFF;
-  //}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__icon:first-child {
+    margin-right: 6px;
+  }
 }
