--- a/src/partials/components/logo.html
+++ b/src/partials/components/logo.html
@@ -1,14 +1,10 @@
 <div class='logo'>
-  <picture>
-    <source srcset='
-                       ./images/logo/logo.webp 1x,
-                       ./images/logo/logo@2x.webp 2x'
-            type='image/webp'>
-    <source srcset='
-                      ./images/logo/logo.png 1x,
-                      ./images/logo/logo@2x.png 2x'
-    >
+  <svg class='logo__icon' width='33' height='26'>
+    <use href='./images/logo/spriteLogo.svg#icon-logo-house'></use>
+  </svg>
+  <svg class='logo__icon' width='97' height='16'>
+    <use href='./images/logo/spriteLogo.svg#icon-logo-text'></use>
+  </svg>
 
-    <img class='logo-img' src='./images/logo/logo.png' alt='logo' width='70'>
-  </picture>
+
 </div>
