--- a/src/partials/components/menu.html
+++ b/src/partials/components/menu.html
@@ -1,17 +1,17 @@
 <ul class='menu__list'>
   <li class='menu__item'>
-    <a href='#home' class='menu__link'>home</a>
+    <a href='#modellen' class='menu__link'>Modellen</a>
   </li>
   <li class='menu__item'>
-    <a href='#gallery' class='menu__link'>gallery</a>
+    <a href='#kopen' class='menu__link'>Kopen</a>
   </li>
   <li class='menu__item'>
-    <a href='#projects' class='menu__link'>projects</a>
+    <a href='#huren' class='menu__link'>Huren</a>
   </li>
   <li class='menu__item'>
-    <a href='#certificates' class='menu__link'>certificates</a>
+    <a href='#nieuws' class='menu__link'>Nieuws</a>
   </li>
   <li class='menu__item'>
-    <a href='#contacts' class='menu__link'>contacts</a>
+    <a href='#contact' class='menu__link'>Contact</a>
   </li>
 </ul>
