--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,7 +1,8 @@
 .header {
   width: 100%;
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 39px;
+  padding-bottom: 39px;
+  background-color: #333333;
   &__container{
     display: flex;
     align-items: center;
