--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -1,5 +1,16 @@
 <footer class='footer'>
-  <div class='container'>
-    sd
+  <div class='container footer__container'>
+    <a class='footer__mail-link' href='mailto:info@eco-cabins.com'>info@eco-cabins.com</a>
+    <a href='#' class='footer__logo'>
+      <include src='./partials/components/logo.html'></include>
+    </a>
+    <ul class='footer__media-list media-list'>
+      <li class='media-list__item'>
+        <a class='media-list__link' href='#'>Cookies</a>
+      </li>
+      <li class='media-list__item'>
+        <a class='media-list__link' href='#'>Privacybeleid</a>
+      </li>
+    </ul>
   </div>
 </footer>
