--- a/src/partials/components/headLinks.html
+++ b/src/partials/components/headLinks.html
@@ -1,7 +1,9 @@
 <link rel='preconnect' href='https://fonts.googleapis.com'>
 <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+<link rel='preconnect' href='https://fonts.googleapis.com'>
+<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
 <link
-  href='https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@100;200;300;400;500;700&display=swap'
+  href='https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Rubik:wght@300;400;500;600;700&display=swap'
   rel='stylesheet'>
 
 <link rel='stylesheet' href='./sass/main.scss' />
