--- a/src/sass/page/_page.scss
+++ b/src/sass/page/_page.scss
@@ -2,6 +2,7 @@
   flex: 1 1 auto;
   //padding: 100px 30px 30px 30px;
   display: flex;
+  flex-direction: column;
   min-width: 0;
   //// .page__side
   //&__side {
