--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,3 +1,9 @@
+$to-mobile: 320px;
+$mobile: 480px;
+$to-tablet: 767px;
+$tablet: 768px;
+$to-desktop: 1279px;
+$desktop: 1280px;
 :root{
   //bg-color
   --primary-bg-color: #fff5f6;
