--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,4 +1,8 @@
 .menu {
+  display: none;
+  @include for-size(desktop) {
+    display: block;
+  }
   &__list {
     display: flex;
     align-items: center;
