--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,3 +1,31 @@
+@mixin for-size($range) {
+  @if $range==to-mobile {
+    @media screen and (max-width: #{$to-mobile}) {
+      @content;
+    }
+  } @else if $range==mobile {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  } @else if $range==tablet {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  } @else if $range==desktop {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  } @else if $range==to-tablet {
+    @media screen and (max-width: $to-tablet) {
+      @content;
+    }
+  } @else if $range==to-desktop {
+    @media screen and (max-width: $to-desktop) {
+      @content;
+    }
+  }
+}
+
 @mixin flex-center {
   display: flex;
   align-items: center;
