--- a/src/partials/components/menu-mobile.html
+++ b/src/partials/components/menu-mobile.html
@@ -1,18 +1,23 @@
-<div class='menu-container js-menu-container' id='mobile-menu'>
-  <button class='menu-close-btn js-close-menu' aria-label='menu close button'>
-    <svg class='icon' width='14' height='14'>
+<div class='menu-mobile js-menu-container'>
+  <button class='menu-mobile__close-btn js-close-menu' aria-label='menu close button'>
+    <svg class='icon icon-menu' width='20' height='20'>
       <use xlink:href='./images/sprite.svg#icon-close-menu'></use>
     </svg>
   </button>
-  <ul class='mobile-menu'>
-    <li><a href='#Modellen' class='mobile-menu__link' data-mobile-item data-link>Modellen</a></li>
-    <li><a href='#Kopen' class='mobile-menu__link' data-mobile-item data-link>Kopen</a></li>
-    <li>
-      <a href='#Huren' class='mobile-menu__link' data-mobile-item data-link>Huren</a>
+  <ul class='menu-mobile__list'>
+    <li class='menu-mobile__item'>
+      <a href='#Modellen' class='menu-mobile__link' data-mobile-item data-link>Modellen</a>
     </li>
-    <li>
-      <a href='#Nieuws' class='mobile-menu__link' data-mobile-item data-link>Nieuws</a>
+    <li class='menu-mobile__item'>
+      <a href='#Kopen' class='menu-mobile__link' data-mobile-item data-link>Kopen</a></li>
+    <li class='menu-mobile__item'>
+      <a href='#Huren' class='menu-mobile__link' data-mobile-item data-link>Huren</a>
     </li>
-    <li><a href='#Contact' class='mobile-menu__link' data-mobile-item data-link>Contact</a></li>
+    <li class='menu-mobile__item'>
+      <a href='#Nieuws' class='menu-mobile__link' data-mobile-item data-link>Nieuws</a>
+    </li>
+    <li class='menu-mobile__item'>
+      <a href='#Contact' class='menu-mobile__link' data-mobile-item data-link>Contact</a>
+    </li>
   </ul>
 </div>
