--- a/src/sass/components/_menu-mobile.scss
+++ b/src/sass/components/_menu-mobile.scss
@@ -10,19 +10,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translateX( 200%);
+  transform: translateX(200%);
   transition: transform 300ms ease-in-out;
+
   &.is-open {
     transform: translateY(0);
   }
 
   &__close-btn {
     position: absolute;
-    top: 45px;
-    right: 30px;
-    width: 30px;
-    height: 32px;
+    top: 36px;
+    right: 18px;
+    width: 27px;
+    height: 27px;
     background-color: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .icon-menu {
       fill: #FFFFFF;
