--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -6,31 +6,49 @@
   padding: 196px 0;
 
   &__container {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: center;
+    align-items: center;
+    @include for-size(tablet) {
+      align-items: start;
+      justify-content: center;
+    }
   }
 
   &__title {
     color: #FFF;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Rubik, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: calc(16 / 16);
+    line-height: calc(18 / 18);
+    @include for-size(tablet) {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: calc(16 / 16);
+    }
   }
 
   &__describe {
     max-width: 440px;
+    text-align: center;
     color: #FFF;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Merriweather, sans-serif;
-    font-size: 30px;
+    font-size: 22px;
     font-style: normal;
     font-weight: 900;
-    line-height: calc(30 / 30);
+    line-height: calc(22 / 22);
     margin-top: 30px;
+    @include for-size(tablet) {
+      text-align: start;
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 900;
+      line-height: calc(30 / 30);
+    }
   }
 }
