--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,8 +5,15 @@
   &__container {
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    margin-top: 17px;
+    @include for-size(tablet) {
+      margin-top: 0px;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   &__mail-link,
@@ -33,14 +40,25 @@
 
   &__logo {
     position: absolute;
-    top: 50%;
+    top: -81%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+
+    @include for-size(tablet) {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
 .media-list {
   display: flex;
+  margin-top: 10px;
+  @include for-size(tablet) {
+    margin-top: 10px;
+  }
+
 
   &__item {
     padding: 10px 21.5px;
@@ -60,6 +78,10 @@
   }
 
   &__item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 16px;
+    @include for-size(tablet) {
+      margin-right: 30px;
+    }
+
   }
 }
