--- a/src/sass/layout/index.scss
+++ b/src/sass/layout/index.scss
@@ -4,5 +4,6 @@
 @import "./projects";
 @import "./certificates";
 @import "contacts";
+@import "./innovation";
 @import "intelligence";
 @import "footer";
