added mob/desc version materials section

--- a/src/sass/layout/index.scss
+++ b/src/sass/layout/index.scss
@@ -4,6 +4,7 @@
 @import "./projects";
 @import "./certificates";
 @import "contacts";
+@import "./materials";
 @import "./innovation";
 @import "intelligence";
 @import "footer";
