finished materials section

--- a/src/partials/layouts/materials.html
+++ b/src/partials/layouts/materials.html
@@ -8,5 +8,25 @@
         licht, flexibel, isoleert goed en bouwt snel en efficiënt. </p>
       <button type='button' class='materials__btn'>Lees meer</button>
     </div>
+    <div class='materials__swiper'>
+      <div class='materials__gallery'>
+        <div class='swiper-wrapper'>
+          <div class='materials__slide swiper-slide'>
+            <img src="./images/materials/01.jpg" alt="materials" />
+          </div>
+          <div class='materials__slide swiper-slide'>
+            <img src="./images/materials/02.jpg" alt="materials" />
+          </div>
+          <div class='materials__slide swiper-slide'>
+            <img src="./images/materials/03.jpg" alt="materials" />
+          </div>
+          <div class='materials__slide swiper-slide'>
+            <img src="./images/materials/04.jpg" alt="materials" />
+          </div>
+        </div>
+        <div class="materials__pagination swiper-pagination"></div>
+      </div>
+      <!-- Handlebars template here -->
+    </div>
   </div>
 </section>
