--- a/src/partials/components/headLinks.html
+++ b/src/partials/components/headLinks.html
@@ -5,5 +5,5 @@
 <link
   href='https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Rubik:wght@300;400;500;600;700&display=swap'
   rel='stylesheet'>
-
+<link rel='stylesheet' href='./sass/libs/swiper-bundle.min.css'>
 <link rel='stylesheet' href='./sass/main.scss' />
