--- a/src/sass/components/_menu-mobile.scss
+++ b/src/sass/components/_menu-mobile.scss
@@ -2,10 +2,10 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
-  z-index: 9;
+  z-index: 119;
   top: 0;
   right: 0;
-  background-color: rgba(96, 92, 92, 0.9);
+  background-color: rgba(96, 92, 92);
   padding: 15px 15px;
   display: flex;
   align-items: center;
