--- a/src/sass/layout/_materials.scss
+++ b/src/sass/layout/_materials.scss
@@ -1,4 +1,6 @@
 .materials {
+  font-family: Rubik, sans-serif;
+  font-feature-settings: 'clig' off, 'liga' off;
 
   &__container {
     position: relative;
@@ -18,16 +20,13 @@
       width: 50%;
       margin-left: auto;
       padding: 62px 116px 57px 15px;
-
     }
   }
 
   &__title {
     color: #222F33;
-    font-feature-settings: 'clig' off, 'liga' off;
     font-family: Merriweather, sans-serif;
     font-size: 30px;
-    font-style: normal;
     font-weight: 900;
     line-height: calc(30 / 30);
   }
@@ -35,15 +34,12 @@
   &__description {
     margin-top: 13px;
     color: #646D70;
-    font-family: Rubik, sans-serif;
     font-size: 14px;
-    font-style: normal;
     font-weight: 400;
-    line-height: calc(26 / 14); /* 185.714% */
+    line-height: calc(26 / 14);
   }
 
   &__btn {
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,17 +47,51 @@
     padding: 10px 15px;
     color: #606B74;
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Rubik, sans-serif;
     font-size: 12px;
-    font-style: normal;
     font-weight: 500;
     line-height: calc(12 / 12);
     border-radius: 4px;
     border: 1px solid #646D70;
     background-color: inherit;
+
     @include for-size(tablet) {
       width: 92px;
     }
   }
+
+  &__swiper {
+    max-width: 360px;
+    display: block;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-bottom: 15px;
+
+    @include for-size(tablet) {
+      position: absolute;
+      top: -91px;
+      right: 130px;
+    }
+  }
+  &__slide{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+  &__pagination.swiper-pagination-bullets {
+    bottom: 14px;
+  }
+
+  &__pagination .swiper-pagination-bullet {
+    background-color: #FFFFFF;
+    opacity: 0.4;
+  }
+
+  &__pagination .swiper-pagination-bullet-active {
+    background-color: #FFFFFF;
+    opacity: 1;
+  }
 }
+
+
+
